# advent-of-code-2024

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  matrix.rs
