[package]
name = "advent_of_code2024_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
code-timing-macros = { version = "0.0.5", features = ["release"] }
const_format = "0.2.33"
itertools = "0.13.0"
indoc = "2.0.5"
regex = "1.11.1"
linked_hash_set = "0.1.4"
priority-queue = "2.1.1"
